# detect_pii

./: .gitignore  Detectpii.py  Makefile  README.md  app.py  app_inference_spec.py  benchmarks.json  example_inference.json  inferless-runtime-config.yaml  inferless.yaml  input_schema.py  pyproject.toml  test.py  testremote.py
.github/workflows/: deploy_inference_apps.yaml  pr_qc.yml  publish_pypi.yml
test/: test-validator.py
tests/: test_validator.py
validator/: DetectPII.py  __init__.py  main.py  post-install.py  test.ipynb  test.py
