[project]
name = "detect_pii"
version = "0.0.2"
description = "Validates that any text does not contain any PII."
authors = [
    {name = "Guardrails AI", email = "contact@guardrailsai.com"}
]
license = {file = "LICENSE"}
readme = "README.md"
requires-python = ">= 3.8.1"
dependencies = [
    "presidio-analyzer~=2.2",
    "presidio-anonymizer~=2.2",
    "numpy<2.0.0",
    "guardrails-ai>=0.4.0",
    "nltk>3.0,<=3.8.1"
]

[project.optional-dependencies]
dev = [
    "pyright",
    "pytest",
    "ruff"
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-rP"
testpaths = [
    "test"
]

[tool.pyright]
include = ["validator"]

